err/pydevd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pydev_bundle'...
Listing './lib/python3.5/site-packages/_pydev_imps'...
Compiling './lib/python3.5/site-packages/_pydev_imps/_pydev_SimpleXMLRPCServer.py'...
***   File "./lib/python3.5/site-packages/_pydev_imps/_pydev_SimpleXMLRPCServer.py", line 263
    except Fault, fault:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/_pydev_imps/_pydev_SocketServer.py'...
***   File "./lib/python3.5/site-packages/_pydev_imps/_pydev_SocketServer.py", line 339
    print '-'*40
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/_pydev_imps/_pydev_inspect.py'...
***   File "./lib/python3.5/site-packages/_pydev_imps/_pydev_inspect.py", line 293
    raise TypeError, 'arg is a built-in module'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/_pydev_imps/_pydev_pkgutil_old.py'...
***   File "./lib/python3.5/site-packages/_pydev_imps/_pydev_pkgutil_old.py", line 543
    except IOError, msg:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/_pydev_imps/_pydev_uuid_old.py'...
***   File "./lib/python3.5/site-packages/_pydev_imps/_pydev_uuid_old.py", line 151
    if not 0 <= time_low < 1<<32L:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/_pydev_imps/_pydev_xmlrpclib.py'...
***   File "./lib/python3.5/site-packages/_pydev_imps/_pydev_xmlrpclib.py", line 294
    True, False = True, False
    ^
SyntaxError: can't assign to keyword

Listing './lib/python3.5/site-packages/_pydev_runfiles'...
Listing './lib/python3.5/site-packages/_pydevd_bundle'...
Compiling './lib/python3.5/site-packages/_pydevd_bundle/pydevconsole_code_for_ironpython.py'...
***   File "./lib/python3.5/site-packages/_pydevd_bundle/pydevconsole_code_for_ironpython.py", line 105
    except SyntaxError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/_pydevd_bundle/pydevd_exec.py'...
***   File "./lib/python3.5/site-packages/_pydevd_bundle/pydevd_exec.py", line 3
    exec exp in global_vars, local_vars
           ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/_pydevd_frame_eval'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydev_ipython'...
Compiling './lib/python3.5/site-packages/pydev_ipython/inputhookglut.py'...
***   File "./lib/python3.5/site-packages/pydev_ipython/inputhookglut.py", line 98
    print '\nKeyboardInterrupt'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pydevd-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pydevd_concurrency_analyser'...
Listing './lib/python3.5/site-packages/pydevd_plugins'...
Listing './lib/python3.5/site-packages/pydevd_plugins/extensions'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './pydevd_attach_to_process'...
Compiling './pydevd_attach_to_process/_check.py'...
***   File "./pydevd_attach_to_process/_check.py", line 2
    print add_code_to_python_process.run_python_code(3736, "print(20)", connect_debugger_tracing=False)
                                   ^
SyntaxError: invalid syntax

Listing './pydevd_attach_to_process/dll'...
Listing './pydevd_attach_to_process/linux'...
Listing './pydevd_attach_to_process/winappdbg'...
Listing './pydevd_attach_to_process/winappdbg/plugins'...
Compiling './pydevd_attach_to_process/winappdbg/plugins/do_example.py'...
***   File "./pydevd_attach_to_process/winappdbg/plugins/do_example.py", line 37
    print "This is an example command."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './pydevd_attach_to_process/winappdbg/plugins/do_exchain.py'...
***   File "./pydevd_attach_to_process/winappdbg/plugins/do_exchain.py", line 40
    print "Exception handlers for thread %d" % thread.get_tid()
                                           ^
SyntaxError: invalid syntax

Compiling './pydevd_attach_to_process/winappdbg/plugins/do_exploitable.py'...
***   File "./pydevd_attach_to_process/winappdbg/plugins/do_exploitable.py", line 46
    print "-" * 79
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './pydevd_attach_to_process/winappdbg/win32'...
Listing './share'...
Listing './share/python-wheels'...
